# birdai

./: .gitignore  PRESENTATION_SCRIPT.txt  app.py  create_ppt.py  main.py  render.yaml  requirements.txt
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/: .gitignore  Dockerfile  README.md  pyproject.toml
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/.github/workflows/: ci.yml  docker-build.yml  documentation.yml  lint.yml  publish.yml  test-publish.yml
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/: __init__.py  cli.py  config.py  model.py  translate.py  utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/analyze/: cli.py  core.py  utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/embeddings/: core.py  utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/evaluation/assessment/: performance_assessor.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/evaluation/preprocessing/: data_processor.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/gui/: __init__.py  analysis.py  embeddings.py  evaluation.py  multi_file.py  review.py  search.py  segments.py  single_file.py  train.py  utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/gui/assets/: gui.js
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/lang/: de.json  en.json  fi.json  fr.json  id.json  pt-br.json  ru.json  se.json  tlh.json  zh_TW.json
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/network/: server.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/search/: core.py  utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/segments/: core.py  utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/species/: utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/birdnet_analyzer/train/: custom_models.py  utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/docs/: best-practices.rst  conf.py  implementation-details.rst  showroom.rst
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/docs/best-practices/: evaluation-tool.rst  segment-review.rst  species-lists.rst  training.rst
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/docs/implementation-details/: crop-modes.rst  segment-collection-mode.rst  training-hyperparameters.rst
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/tests/: test_utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/tests/analyze/: test_analyze.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/tests/embeddings/: test_embeddings.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/tests/evaluation/assessment/: test_performance_assessor.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/tests/evaluation/preprocessing/: test_data_processor.py  test_utils.py
BirdNET-Analyzer-main (2)/BirdNET-Analyzer-main/tests/species/: test_species.py
static/: script.js  style.css
templates/: index.html
