[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "birdnet_analyzer"
version = "2.4.0"
license = { text = "MIT" }
description = "BirdNET analyzer for scientific audio data processing and bird classification."
authors = [{ name = "Stefan Kahl" }]
maintainers = [{ name = "Josef Haupt" }, { name = "Max Mauermann" }]
keywords = ["birdnet", "birdnet-analyzer"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "librosa>=0.11",
    "resampy",
    "tensorflow>=2.20",
    "pyarrow>=22.0.0;platform_system=='Darwin'", # https://github.com/apache/arrow/issues/40088
    "tqdm",
    "pandas",
    "matplotlib",
    "kagglehub",
]

[project.optional-dependencies]
train = ["keras-tuner"]
server = ["bottle", "requests"]
gui = [
    "birdnet-analyzer[train,embeddings]",
    "gradio>=5.46, <6.0",
    "pywebview>=6.0",
    "pyobjc-framework-UniformTypeIdentifiers;platform_system=='Darwin'", # macOS only, until pywebview adds it as dependency
    "plotly[express]",
    "pywin32;platform_system=='Windows'",
    "qtpy;platform_system=='Linux'",
    "PyGObject;platform_system=='Linux'",
]
embeddings = ["perch-hoplite>=0.1.1,<1.0.0"]
all = ["birdnet-analyzer[server,gui]"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-argparse"]
tests = ["pytest", "pytest-timeout", "pytest-order"]
dev = ["birdnet_analyzer[tests]", "birdnet_analyzer[docs]", "ruff==0.14.0"]

[project.scripts]
birdnet-analyze = "birdnet_analyzer.analyze.cli:main"
birdnet-embeddings = "birdnet_analyzer.embeddings.cli:main"
birdnet-evaluate = "birdnet_analyzer.evaluation.__init__:main"
birdnet-search = "birdnet_analyzer.search.cli:main"
birdnet-train = "birdnet_analyzer.train.cli:main"
birdnet-segments = "birdnet_analyzer.segments.cli:main"
birdnet-species = "birdnet_analyzer.species.cli:main"

[project.gui-scripts]
birdnet-gui = "birdnet_analyzer.gui.__init__:main"

[project.urls]
Homepage = "https://birdnet.cornell.edu/birdnet"
Documentation = "https://birdnet-team.github.io/BirdNET-Analyzer/"
Repository = "https://github.com/birdnet-team/BirdNET-Analyzer"
Issues = "https://github.com/birdnet-team/BirdNET-Analyzer/issues"
Download = "https://github.com/birdnet-team/BirdNET-Analyzer/releases/latest"

[tool.setuptools]
packages = [
    "birdnet_analyzer",
    "birdnet_analyzer.analyze",
    "birdnet_analyzer.gui",
    "birdnet_analyzer.embeddings",
    "birdnet_analyzer.search",
    "birdnet_analyzer.species",
    "birdnet_analyzer.segments",
    "birdnet_analyzer.train",
    "birdnet_analyzer.evaluation",
    "birdnet_analyzer.evaluation.preprocessing",
    "birdnet_analyzer.evaluation.assessment",
]

[tool.setuptools.package-data]
birdnet_analyzer = [
    "eBird_taxonomy_codes_2024E.json",
    "lang/*",
    "labels/**/*",
    "gui/assets/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["birdnet_analyzer"]
timeout = 120
filterwarnings = [
    "ignore::DeprecationWarning:audioread.*",
    "ignore::UserWarning:sklearn.*",
]

[tool.ruff]
exclude = ["conf.py"]
line-length = 165

[tool.ruff.lint]
select = [
    "F",
    "B",
    "A",
    "C4",
    "T10",
    "EXE",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TD",
    "TC",
    #"PTH",
    "FLY",
    "I",
    "NPY",
    "PD",
    #"N",
    "PERF",
    "E",
    "W",
    #"D",
    "PL",
    "UP",
    "FURB",
    "RUF",
]
ignore = [
    "B008",
    "TD003",
    "TD002",
    "SIM108",
    "E722",
    "PLR2004",
    "PLR0913",
    "PLR0915",
    "PLR0912",
    "PLC0206",
    "PLC0415",
    "RUF015",
]
